# sogma

./: pyproject.toml
python/: autocut.py  cuts.py  device.py  files.py  gmem.py  gutils.py  loading.py  logging.py  mapmaking.py  nmat.py  pmat.py  socal.py  socut.py  sodata.py  soeph.py  sogma.py  tiling.py
python/loaders/: minisotodlib.py  simple.py  socommon.py  sofast.py  soquery.py  soslow.py
